[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/pausemenu/pausemenu.gd" type="Script" id=1]
[ext_resource path="res://assets/common/themes/iso_dark.theme" type="Theme" id=2]
[ext_resource path="res://assets/ui/submenus/settings/settings.tscn" type="PackedScene" id=3]

[node name="pausemenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_name = "pausemenu"

[node name="menu" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -152.0
margin_right = 150.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 250.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="menu/VBoxContainer"]
margin_right = 300.0
margin_bottom = 34.0
mouse_filter = 1

[node name="resume" type="Button" parent="menu/VBoxContainer/CenterContainer"]
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 300, 30 )
text = "RESUME"

[node name="CenterContainer3" type="CenterContainer" parent="menu/VBoxContainer"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 142.0
mouse_filter = 1

[node name="settings" type="Button" parent="menu/VBoxContainer/CenterContainer3"]
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 300, 30 )
text = "SETTINGS"

[node name="CenterContainer4" type="CenterContainer" parent="menu/VBoxContainer"]
visible = false
margin_top = 162.0
margin_right = 300.0
margin_bottom = 196.0
mouse_filter = 1

[node name="language" type="Button" parent="menu/VBoxContainer/CenterContainer4"]
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 300, 30 )
text = "LANGUAGE"

[node name="CenterContainer6" type="CenterContainer" parent="menu/VBoxContainer"]
margin_top = 162.0
margin_right = 300.0
margin_bottom = 196.0
mouse_filter = 1

[node name="leave" type="Button" parent="menu/VBoxContainer/CenterContainer6"]
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 300, 30 )
text = "LEAVE"

[node name="CenterContainer5" type="CenterContainer" parent="menu/VBoxContainer"]
margin_top = 216.0
margin_right = 300.0
margin_bottom = 250.0
mouse_filter = 1

[node name="quit" type="Button" parent="menu/VBoxContainer/CenterContainer5"]
margin_right = 300.0
margin_bottom = 34.0
rect_min_size = Vector2( 300, 30 )
text = "QUIT"

[node name="settings" parent="." instance=ExtResource( 3 )]
visible = false
scroll_cont = NodePath("../Settings/Settings")
[connection signal="about_to_show" from="." to="." method="_on_pausemenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_pausemenu_popup_hide"]
[connection signal="pressed" from="menu/VBoxContainer/CenterContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/CenterContainer3/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/CenterContainer4/language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/CenterContainer6/leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/CenterContainer5/quit" to="." method="_on_quit_pressed"]
